# voicebound

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  ai_translate.py  ai_voice.py  config.example.toml  install.sh  main.py  pyproject.toml  requirements.txt  voicebound_cli.py
.github/workflows/: lint.yml  tests.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
examples/: config_example.toml  input_format.xml
src/: cli.py  command_context.py  command_utils.py  summary_reporter.py  task_runner.py  translation_api.py  utils.py
src/apis/: translation_api.py  voice_api.py
src/commands/: __init__.py  ai_translate.py  ai_voice.py
src/core/: command_context.py  summary_reporter.py  task_runner.py  types.py
src/prompts/: __init__.py  acting_instructions.py  translation.py
src/providers/: __init__.py  elevenlabs_provider.py  hume_provider.py  openai_provider.py  openai_tts_provider.py  registry.py  types.py
src/utils/: __init__.py  command_utils.py
src/voicebound/: __init__.py  cli.py  utils.py
src/voicebound/commands/: __init__.py  ai_translate.py  ai_voice.py
tests/: conftest.py  test_cli.py  test_coverage_commands_cli.py  test_coverage_core_utils.py  test_coverage_translation_voice.py  test_providers.py  test_translate.py  test_utils.py  test_voice.py  tmp-config.toml
