[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicebound"
version = "0.1.0"
description = "Utilities for translating and generating audio from text assets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai==2.9.0",
    "tiktoken==0.12.0",
    "requests==2.32.3",
    "toml==0.10.2",
    "loguru==0.7.2",
    "typer==0.12.5",
]

[project.scripts]
voicebound = "cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "utils"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["TCH"]
ignore = ["TCH003"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
