[project]
name = "voicebound"
version = "0.1.0"
description = "Utilities for translating and generating audio from text assets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai==2.9.0",
    "tiktoken==0.12.0",
    "requests==2.32.3",
    "httpx==0.27.2",
    "anyio==4.6.2.post1",
    "aiolimiter==1.1.0",
    "tenacity==8.5.0",
    "toml==0.10.2",
    "loguru==0.7.2",
    "typer==0.12.5",
    "click==8.1.7",
    "rich==13.7.1",
]

[project.scripts]
voicebound = "cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==4.1.0",
    "ruff==0.8.3",
    "mypy==1.13.0",
    "types-requests==2.32.0.20241016",
    "types-toml==0.10.8.20240310",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "utils"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["TC"]
ignore = ["TC003"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
