[project]
name = "voicebound"
version = "0.1.0"
description = "Utilities for translating and generating audio from text assets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai==2.9.0",
    "tiktoken==0.12.0",
    "requests==2.32.3",
    "httpx==0.27.2",
    "anyio==4.6.2.post1",
    "aiolimiter==1.1.0",
    "tenacity==8.5.0",
    "toml==0.10.2",
    "loguru==0.7.2",
    "typer==0.12.5",
    "click==8.1.7",
    "rich==13.7.1",
]

[project.scripts]
voicebound = "cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==4.1.0",
    "ruff==0.8.3",
    "ty==0.0.5",
    "types-requests==2.32.0.20241016",
    "types-toml==0.10.8.20240310",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "utils"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["TC"]
ignore = ["TC003"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*asyncio\\.iscoroutinefunction.*:DeprecationWarning:loguru\\._simple_sinks",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
possibly-missing-attribute = "warn"
possibly-unresolved-reference = "warn"
unknown-argument = "error"
unresolved-attribute = "error"
unresolved-global = "error"
unresolved-import = "error"
unresolved-reference = "error"
